libcxx/test/libcxx/ranges/range.access/ssize.verify.cpp
//===----------------------------------------------------------------------===//
//
// Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
//===----------------------------------------------------------------------===//

// UNSUPPORTED: c++03, c++11, c++14, c++17

// std::ranges::ssize
//   Substitution failure should give reasonably nice diagnostics.

#include <ranges>

void f() {
  std::ranges::ssize(42);
  // expected-error@-1 {{no matching function for call}}
  // expected-note@*:* {{candidate template ignored: constraints not satisfied}}
  // expected-note@*:* {{because 'ranges::size(__t)' would be invalid}}
}

void g() {
  struct S {} s;
  std::ranges::ssize(s);
  // expected-error@-1 {{no matching function for call}}
  // expected-note@*:* {{candidate template ignored: constraints not satisfied}}
  // expected-note@*:* {{because 'ranges::size(__t)' would be invalid}}
}
